...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tadje.myapplication.ui.HolidayFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_container_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/employeeManager"
...
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <Spinner
            android:id="@+id/spinnerEmployee"
            android:layout_width="133dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPaleVioltRed"
            android:entries="@android:drawable/ic_menu_myplaces"
...
